[package]
name = "investigator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license = "LGPL-3.0-or-later"
default-run = "investigator_cli"
description.workspace = true



[dependencies]
investigator_analyst = {path = "../investigator_analyst"}
investigator_register = {path ="../investigator_register"}
investigator_extractor = {path ="../investigator_extractor"}

[features]
gui = []

[[bin]]
name = "investigator_cli"
path = "src/bin/cli.rs"

[[bin]]
name = "investigator_gui"
path = "src/bin/gui.rs"
required-features = ["gui"]